--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_storage: ^2.1.1
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
+  pdf: ^3.11.3
 
 dev_dependencies:
   flutter_test:
